--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,18 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.2.x-dev",
-        "cwp/agency-extensions": "2.1.x-dev",
-        "cwp/watea-theme": "2.1.x-dev",
-        "silverstripe/controllerpolicy": "2.1.x-dev",
-        "silverstripe/crontask": "2.1.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.1.x-dev",
-        "silverstripe/ldap": "1.0.x-dev",
-        "silverstripe/recipe-content-blocks": "2.1.x-dev",
-        "dnadesign/silverstripe-elemental-subsites": "3.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
-        "silverstripe/textextraction": "3.0.x-dev",
-        "silverstripe/realme": "3.1.x-dev"
+        "cwp/cwp-installer": "2.2.0-rc1",
+        "cwp/agency-extensions": "2.1.0@stable",
+        "cwp/watea-theme": "2.1.0@stable",
+        "silverstripe/controllerpolicy": "2.1.0@stable",
+        "silverstripe/crontask": "2.1.1@stable",
+        "silverstripe/gridfieldqueuedexport": "2.1.1@stable",
+        "silverstripe/ldap": "1.0.3@stable",
+        "silverstripe/recipe-content-blocks": "2.1.0-rc1",
+        "dnadesign/silverstripe-elemental-subsites": "3.0.0-beta1",
+        "dnadesign/silverstripe-elemental-userforms": "3.0.0-beta1",
+        "silverstripe/textextraction": "3.0.0@stable",
+        "silverstripe/realme": "3.1.0@stable"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
