--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,38 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.1.x-dev",
-        "cwp/agency-extensions": "2.0.x-dev",
-        "cwp/watea-theme": "2.0.x-dev",
-        "silverstripe/controllerpolicy": "2.1.x-dev",
-        "silverstripe/crontask": "2.1.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.1.x-dev",
-        "silverstripe/ldap": "1.0.x-dev",
-        "silverstripe/recipe-content-blocks": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
-        "silverstripe/realme": "3.0.x-dev"
+        "cwp/cwp-installer": "2.1.2@stable",
+        "cwp/agency-extensions": "2.0.0@stable",
+        "cwp/watea-theme": "2.0.2@stable",
+        "silverstripe/controllerpolicy": "2.1.0@stable",
+        "silverstripe/crontask": "2.1.0@stable",
+        "silverstripe/gridfieldqueuedexport": "2.1.0@stable",
+        "silverstripe/ldap": "1.0.2@stable",
+        "silverstripe/recipe-content-blocks": "2.0.2@stable",
+        "dnadesign/silverstripe-elemental-subsites": "2.0.0@stable",
+        "dnadesign/silverstripe-elemental-userforms": "2.0.0@stable",
+        "silverstripe/realme": "3.0.0-rc1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsstream": "^1.6"
     },
     "extra": {
-        "project-files": []
+        "project-files": [],
+        "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
+            "web.config"
+        ]
     },
     "config": {
         "process-timeout": 600
