--- a/composer.json
+++ b/composer.json
@@ -7,23 +7,23 @@
     "require": {
         "php": ">=7.1",
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.4.x-dev",
-        "cwp/agency-extensions": "2.3.x-dev",
-        "cwp/watea-theme": "3.0.x-dev",
-        "silverstripe/controllerpolicy": "2.1.x-dev",
-        "silverstripe/crontask": "2.1.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.3.x-dev",
-        "silverstripe/ldap": "1.1.x-dev",
-        "silverstripe/recipe-content-blocks": "2.4.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
-        "silverstripe/textextraction": "3.0.x-dev",
-        "silverstripe/realme": "3.1.x-dev",
-        "silverstripe/ckan-registry": "1.1.x-dev",
-        "silverstripe/mfa": "4.0.x-dev",
-        "silverstripe/totp-authenticator": "4.0.x-dev",
-        "silverstripe/webauthn-authenticator": "4.0.x-dev",
-        "silverstripe/security-extensions": "4.0.x-dev",
-        "silverstripe/login-forms": "4.0.x-dev",
+        "cwp/cwp-installer": "2.4.1@stable",
+        "cwp/agency-extensions": "2.3.0@stable",
+        "cwp/watea-theme": "3.0.1@stable",
+        "silverstripe/controllerpolicy": "2.1.0@stable",
+        "silverstripe/crontask": "2.1.3@stable",
+        "silverstripe/gridfieldqueuedexport": "2.3.0@stable",
+        "silverstripe/ldap": "1.1.2@stable",
+        "silverstripe/recipe-content-blocks": "2.4.1@stable",
+        "dnadesign/silverstripe-elemental-userforms": "3.0.0@stable",
+        "silverstripe/textextraction": "3.0.3@stable",
+        "silverstripe/realme": "3.1.3@stable",
+        "silverstripe/ckan-registry": "1.1.0@stable",
+        "silverstripe/mfa": "4.0.0@stable",
+        "silverstripe/totp-authenticator": "4.0.0@stable",
+        "silverstripe/webauthn-authenticator": "4.0.0@stable",
+        "silverstripe/security-extensions": "4.0.0@stable",
+        "silverstripe/login-forms": "4.0.0@stable",
         "ext-mcrypt": "*"
     },
     "require-dev": {
