--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,15 @@
         "silverstripe/webauthn-authenticator": "4.x-dev",
         "silverstripe/security-extensions": "4.x-dev",
         "silverstripe/login-forms": "4.x-dev",
-        "symbiote/silverstripe-multivaluefield": "5.x-dev"
+        "symbiote/silverstripe-multivaluefield": "5.x-dev",
+        "silverstripe/subsites": "2.x-dev"
     },
     "require-dev": {
         "silverstripe/frameworktest": "dev-master",
         "silverstripe/graphql-devtools": "1.x-dev",
         "silverstripe/recipe-testing": "^1",
         "mikey179/vfsstream": "^1.6",
-        "sminnee/phpunit-mock-objects": "^3.4.5"
+        "sminnee/phpunit-mock-objects": "^3.4.7"
     },
     "suggest": {
         "silverstripe/mfa": "Add MFA authentication. Only available in PHP ^7.1.",
