--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "silverstripe/webauthn-authenticator": "4.0.x-dev",
         "silverstripe/security-extensions": "4.0.x-dev",
         "silverstripe/login-forms": "4.2.x-dev",
-        "symbiote/silverstripe-multivaluefield": "5.0.x-dev"
+        "symbiote/silverstripe-multivaluefield": "5.0.x-dev",
+	"silverstripe/subsites": "2.3.x-dev"
     },
     "require-dev": {
         "silverstripe/frameworktest": "4.x-dev",
