MNT Update Cow path to support Composer 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
 
   # Validate cow schema
   - composer global require silverstripe/cow ^2
-  - $HOME/.composer/vendor/bin/cow schema:validate
+  - ~/.config/composer/vendor/bin/cow schema:validate
 
 script:
   - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit --testsuite "$PHPUNIT_TEST" --exclude-group exclude-from-travis; fi
