--- a/composer.json
+++ b/composer.json
@@ -7,23 +7,23 @@
     "require": {
         "php": ">=7.1",
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.8.x-dev",
-        "cwp/agency-extensions": "2.5.x-dev",
-        "cwp/watea-theme": "3.1.x-dev",
-        "silverstripe/controllerpolicy": "2.2.x-dev",
-        "silverstripe/crontask": "2.2.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.4.x-dev",
-        "silverstripe/ldap": "1.2.x-dev",
-        "silverstripe/recipe-content-blocks": "2.8.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
-        "silverstripe/textextraction": "3.2.x-dev",
-        "silverstripe/realme": "4.1.x-dev",
-        "silverstripe/ckan-registry": "1.2.x-dev",
-        "silverstripe/webauthn-authenticator": "4.2.x-dev",
-        "silverstripe/security-extensions": "4.1.x-dev",
-        "silverstripe/login-forms": "4.4.x-dev",
+        "cwp/cwp-installer": "2.8.0@stable",
+        "cwp/agency-extensions": "2.5.0@stable",
+        "cwp/watea-theme": "3.1.0@stable",
+        "silverstripe/controllerpolicy": "2.2.0@stable",
+        "silverstripe/crontask": "2.2.0@stable",
+        "silverstripe/gridfieldqueuedexport": "2.4.0@stable",
+        "silverstripe/ldap": "1.2.1@stable",
+        "silverstripe/recipe-content-blocks": "2.8.0@stable",
+        "dnadesign/silverstripe-elemental-userforms": "3.0.0@stable",
+        "silverstripe/textextraction": "3.2.0@stable",
+        "silverstripe/realme": "4.1.0@stable",
+        "silverstripe/ckan-registry": "1.2.0@stable",
+        "silverstripe/webauthn-authenticator": "4.2.0@stable",
+        "silverstripe/security-extensions": "4.1.0@stable",
+        "silverstripe/login-forms": "4.4.1@stable",
         "symbiote/silverstripe-multivaluefield": "5.0.x-dev",
-        "silverstripe/subsites": "2.4.x-dev"
+        "silverstripe/subsites": "2.4.0@stable"
     },
     "require-dev": {
         "silverstripe/frameworktest": "4.x-dev",
